--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,10 +42,17 @@
                 <ul class="nav navbar-nav">
                     <li{% if request.path=="/" %} class="active"{% endif %}><a href="/">Read a story</a></li>
                     <li{% if request.path=="/share" %} class="active"{% endif %}><a href="/share">Share a story</a></li>
-                    <li><a href="/clear">Clear</a></li>
                 </ul>
-                <ul class="nav navbar-right">
-                    <li><a href="/logout">Logout</a></li>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Welcome ^{{ current_user.id }} <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/change">Change password</a></li>
+                            <li><a href="/clear">Clear viewed stories</a></li>
+                            <li class="divider"></li>
+                            <li><a href="/logout">Logout</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 {% else %}
                 <ul class="nav navbar-nav">
