--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,19 +46,19 @@
     <div class="row centered">
         <br><br>
         <div class="col-sm-4">
-            <i class="glyphicon glyphicon-user"></i>
+            <span class="glyphicon glyphicon-user"></span>
             <h4>ANONYMOUS</h4>
             <p>There are no usernames, profiles or avatars here on murmur, because sometimes our identity gets in the way of what's important. You are identified only by your unique account number, allowing you to share freely.</p>
         </div><!-- col-lg-4 -->
 
         <div class="col-sm-4">
-            <i class="glyphicon glyphicon-heart"></i>
+            <span class="glyphicon glyphicon-heart"></span>
             <h4>INTERESTING</h4>
             <p>Share your thoughts buzzing around in your head, discover a stranger's hidden passion for the ukelele, or relive a precious childhood memory. Step into another pair of shoes and you'll soon realise how interesting life really is.</p>
         </div><!-- col-lg-4 -->
 
         <div class="col-sm-4">
-            <i class="glyphicon glyphicon-map-marker"></i>
+            <span class="glyphicon glyphicon-map-marker"></span>
             <h4>LOCATION BASED</h4>
             <p>Discover interesting stories from people near you right from the start, no following or time consuming friend lists required. See your own town through the eyes of others, and discover the heartbeat you never realised it had.</p>
         </div><!-- col-lg-4 -->
